2007-05-24 20:37  nick

	* panel/panel-item-manager.c, NEWS: Fix loading internal plugins 
	if a similar file exists in the start directory (Bug #3279).

2007-04-09 10:05  maximilian

	* libexo/trunk/po-doc/fr.po, libexo/trunk/po/fr.po,
	  libxfce4util/branches/xfce_4_4/po/fr.po,
	  libxfce4util/trunk/po/fr.po,
	  libxfcegui4/branches/xfce_4_4/po/fr.po,
	  libxfcegui4/trunk/po/fr.po, mousepad/branches/xfce_4_4/po/fr.po,
	  mousepad/trunk/po/fr.po, squeeze/trunk/po/fr.po,
	  terminal/trunk/po-doc/ChangeLog, terminal/trunk/po-doc/fr.po,
	  terminal/trunk/po/fr.po, thunar/trunk/po-doc/fr.po,
	  thunar/trunk/po/fr.po, xarchiver/trunk/po/fr.po,
	  xfburn/trunk/po/fr.po, xfcalendar/branches/xfce_4_4/po/fr.po,
	  xfcalendar/trunk/po/fr.po,
	  xfce-mcs-manager/branches/xfce_4_4/po/fr.po,
	  xfce-mcs-manager/trunk/po/fr.po,
	  xfce-mcs-plugins/branches/xfce_4_4/po/fr.po,
	  xfce-mcs-plugins/trunk/po/fr.po,
	  xfce-utils/branches/xfce_4_4/po/fr.po, xfce-utils/trunk/po/fr.po,
	  xfce4-appfinder/branches/xfce_4_4/po/fr.po,
	  xfce4-icon-theme/branches/xfce_4_4/po/fr.po,
	  xfce4-icon-theme/trunk/po/fr.po, po/fr.po,
	  xfce4-panel/trunk/po/fr.po,
	  xfce4-session/branches/xfce_4_4/po/fr.po,
	  xfce4-session/trunk/po/fr.po,
	  xfce4-trigger-launcher/trunk/po/fr.po,
	  xfdesktop/branches/xfce_4_4/po-doc/fr.po,
	  xfdesktop/branches/xfce_4_4/po/fr.po,
	  xfdesktop/trunk/po-doc/fr.po, xfdesktop/trunk/po/fr.po,
	  xfmedia/trunk/po/fr.po, xfprint/branches/xfce_4_4/po/fr.po,
	  xfprint/trunk/po/fr.po, xfwm4/branches/xfce_4_4/po/fr.po,
	  xfwm4/trunk/po/fr.po: * fr.po: Fixed typos and style in the
	  French translation of Terminal's manual
	  * Changed my email address in all the fr.po files in trunk and
	  4.4

2007-04-07 09:34  olivier

	* INSTALL, configure.ac.in, docs/API/libxfce4panel-decl-list.txt,
	  docs/API/libxfce4panel-decl.txt,
	  docs/API/xml/xfce-panel-plugin-iface.xml: Update version

2007-04-06 06:30  sas

	* libxfcegui4/branches/xfce_4_4/po/hu.po,