@@ -8,6 +8,7 @@ NEWS for xfce4-panel
   Xinerama setup with differently sized monitors (Bug #3097). (Jasper)
 - Fix loading internal plugins if a similar file exists in the start directory
   (Bug #3279). (Nick)
+- Only update the clock once a minute when seconds are disabled. (Nick)
 
 4.4.1
 =====
