@@ -1,3 +1,7 @@
+2007-05-25 12:16 nick
+
+	* plugins/clock/clock.c: Backport rev 25761.
+
 2007-05-24 20:37  nick
 
 	* panel/panel-item-manager.c, NEWS: Fix loading internal plugins 
